[package]
name = "iota-wasi-wallet"
version = "0.0.1"
authors = ["huhn511 <huhn@einfachIOTA.de>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
seahorse = "1.0.0"
iota-core = { git = "https://github.com/iotaledger/iota.rs" }
anyhow = "1.0.28"
